--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <body>
     <div id="attacker" class="unit-container">
         <h3 class="unit-name"></h3>
-        <img class="unit-portrait">
-        <img class="weapon-type">
-        <img class="weapon-name">
+        <img class="unit-portrait" src="">
+        <img class="weapon-type" src="">
+        <img class="weapon-name" src="">
         <p class="weapon-info"></p>
         <p class="repeat-attack"></p>
         <p class="hp"></p>
         <p class="might"></p>
         <p class="accuracy"></p>
         <p class="critical"></p>
-        <img class="map-sprite">
+        <img class="map-sprite" src="">
     </div>
 
     <div class="buttons-container">
@@ -38,52 +38,38 @@
 
     <div id="defender" class="unit-container">
         <h3 class="unit-name"></h3>
-        <img class="unit-portrait">
-        <img class="weapon-type">
-        <img class="weapon-name">
+        <img class="unit-portrait" src="">
+        <img class="weapon-type" src="">
+        <img class="weapon-name" src="">
         <p class="weapon-info"></p>
         <p class="repeat-attack"></p>
         <p class="hp"></p>
         <p class="might"></p>
         <p class="accuracy"></p>
         <p class="critical"></p>
-        <img class="map-sprite">
+        <img class="map-sprite" src="">
     </div>
 
     <div class="unit-input">
         <div id="unit1">
-            <label>
-                Attacker:
-                <select id="unit1-unit-dropdown">
-                </select>
-            </label>
-            <label>
-                <select id="unit1-weapon-dropdown">
-                </select>
-            </label>
-            <label>
-                <select id="unit1-terrain-dropdown">
-                </select>
-            </label>
+            <label for="unit1-unit-dropdown">Attacker:</label>
+            <select id="unit1-unit-dropdown"></select>
+            <label for="unit1-weapon-dropdown"></label>
+            <select id="unit1-weapon-dropdown"></select>
+            <label for="unit1-terrain-dropdown"></label>
+            <select id="unit1-terrain-dropdown"></select>
         </div>
         <div id="unit2">
-            <label>
-                Defender:
-                <select id="unit2-unit-dropdown">
-                </select>
-            </label>
-            <label>
-                <select id="unit2-weapon-dropdown">
-                </select>
-            </label>
-            <label>
-                <select id="unit2-terrain-dropdown">
-                </select>
-            </label>
+            <label for="unit2-unit-dropdown">Defender:</label>
+            <select id="unit2-unit-dropdown"></select>
+            <label for="unit2-weapon-dropdown"></label>
+            <select id="unit2-weapon-dropdown"></select>
+            <label for="unit2-terrain-dropdown"></label>
+            <select id="unit2-terrain-dropdown"></select>
         </div>
     </div>
     <div>
-        <textarea id="battle-log" rows="8" cols="60"></textarea>
+        <label for="battle-log"></label><textarea id="battle-log" rows="8" cols="60"></textarea>
     </div>
 
 </body>
