--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+TODO: Merge input with display.
+TODO: Add input access to unit stats variables.
+-->
+
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -7,6 +12,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
     <script type="text/javascript" src="js/Misc.js"></script>
     <script type="text/javascript" src="js/Terrain.js"></script>
     <script type="text/javascript" src="js/Weapon.js"></script>
