Flip attacker image and centre ui

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ TODO: Add input access to unit stats variables.
             <select id="unit1-unit-dropdown"></select>
         </h3>
         <div class="unit-portrait-container">
-            <img class="unit-portrait" src="">
+            <img class="unit-portrait flip-horizontal" src="">
         </div>
 
         <div class="weapon-info">
@@ -90,7 +90,7 @@ TODO: Add input access to unit stats variables.
 
     <div id="battle-log-container">
         <label for="battle-log"></label>
-        <textarea id="battle-log" rows="8" cols="64"></textarea>
+        <textarea id="battle-log" rows="8" cols="57"></textarea>
     </div>
 
 </body>
