Add visual support for bows and battle separation

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@ TODO: Add input access to unit stats variables.
     <div class="buttons-container">
         <button id="fight" type="button">FIGHT!</button>
         <button id="reset" type="button">RESET!</button>
+
+        <br/>
+
+        <label for="battle-separation">Separation:</label>
+        <select id="battle-separation">
+            <option value="1">1</option>
+            <option value="2">2</option>
+        </select>
     </div>
 
     <div id="defender" class="unit-container">
