Prepare visual dropdown for unit levelling

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ TODO: Add input access to unit stats variables.
             <label for="unit1-unit-dropdown">Attacker:</label>
             <select id="unit1-unit-dropdown"></select>
         </h3>
+        <h4>
+            <label for="unit1-level-dropdown">Level:</label>
+            <select id="unit1-level-dropdown"></select>
+        </h4>
         <div class="unit-portrait-container">
             <img class="unit-portrait flip-horizontal" src="">
         </div>
@@ -72,6 +76,10 @@ TODO: Add input access to unit stats variables.
             <label for="unit2-unit-dropdown">Defender:</label>
             <select id="unit2-unit-dropdown"></select>
         </h3>
+        <h4>
+            <label for="unit2-level-dropdown">Level:</label>
+            <select id="unit2-level-dropdown"></select>
+        </h4>
         <div class="unit-portrait-container">
             <img class="unit-portrait" src="">
         </div>
