--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ TODO: Add input access to unit stats variables.
 
         <br/>
 
-        <label for="battle-separation">Separation:</label>
-        <select id="battle-separation">
+        <label for="battle-separation" hidden>Separation:</label>
+        <select id="battle-separation" hidden>
             <option value="1">1</option>
             <option value="2">2</option>
         </select>
