Add inputs for unit stats (read-only)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,54 @@ TODO: Add input access to unit stats variables.
 
         <label for="unit1-terrain-dropdown"></label>
         <select id="unit1-terrain-dropdown"></select>
-        <!--<img class="map-sprite" src="">-->
+
+        <table>
+            <tbody>
+            <tr>
+                <th><br></th>
+            </tr>
+            <tr>
+                <td>
+                    <label>HP</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Luck</label>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Power</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Def</label>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Skill</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Res</label>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Speed</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Con</label>
+                    <input type="text">
+                </td>
+            </tr>
+            </tbody>
+        </table>
         
     </div>
 
@@ -100,8 +147,55 @@ TODO: Add input access to unit stats variables.
 
         <label for="unit2-terrain-dropdown"></label>
         <select id="unit2-terrain-dropdown"></select>
-        <!--<img class="map-sprite" src="">-->
-        
+
+        <table>
+            <tbody>
+            <tr>
+                <th><br></th>
+            </tr>
+            <tr>
+                <td>
+                    <label>HP</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Luck</label>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Power</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Def</label>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Skill</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Res</label>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Speed</label>
+                    <input type="text">
+                </td>
+                <td>
+                    <label>Con</label>
+                    <input type="text">
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
     </div>
 
     <div id="battle-log-container">
