Allow editing of stats inputs

--- a/index.html
+++ b/index.html
@@ -56,49 +56,49 @@ TODO: Add input access to unit stats variables.
 
         <table>
             <tbody>
-            <tr>
-                <th><br></th>
-            </tr>
-            <tr>
-                <td>
-                    <label>HP</label>
-                    <input type="text">
-                </td>
-                <td>
-                    <label>Luck</label>
-                    <input type="text">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Power</label>
-                    <input type="text">
-                </td>
-                <td>
-                    <label>Def</label>
-                    <input type="text">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Skill</label>
-                    <input type="text">
-                </td>
-                <td>
-                    <label>Res</label>
-                    <input type="text">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Speed</label>
-                    <input type="text">
-                </td>
-                <td>
-                    <label>Con</label>
-                    <input type="text">
-                </td>
-            </tr>
+                <tr>
+                    <th><br></th>
+                </tr>
+                <tr>
+                    <td>
+                        <label>HP</label>
+                        <input class="stat" name="HP" type="text">
+                    </td>
+                    <td>
+                        <label>Luck</label>
+                        <input class="stat" name="luck" type="text">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Power</label>
+                        <input class="stat" name="power" type="text">
+                    </td>
+                    <td>
+                        <label>Def</label>
+                        <input class="stat" name="defence" type="text">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Skill</label>
+                        <input class="stat" name="skill" type="text">
+                    </td>
+                    <td>
+                        <label>Res</label>
+                        <input class="stat" name="resistance" type="text">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Speed</label>
+                        <input class="stat" name="speed" type="text">
+                    </td>
+                    <td>
+                        <label>Con</label>
+                        <input class="stat" name="constitution" type="text">
+                    </td>
+                </tr>
             </tbody>
         </table>
         
@@ -156,41 +156,41 @@ TODO: Add input access to unit stats variables.
             <tr>
                 <td>
                     <label>HP</label>
-                    <input type="text">
+                    <input class="stat" name="HP" type="text">
                 </td>
                 <td>
                     <label>Luck</label>
-                    <input type="text">
+                    <input class="stat" name="luck" type="text">
                 </td>
             </tr>
             <tr>
                 <td>
                     <label>Power</label>
-                    <input type="text">
+                    <input class="stat" name="power" type="text">
                 </td>
                 <td>
                     <label>Def</label>
-                    <input type="text">
+                    <input class="stat" name="defence" type="text">
                 </td>
             </tr>
             <tr>
                 <td>
                     <label>Skill</label>
-                    <input type="text">
+                    <input class="stat" name="skill" type="text">
                 </td>
                 <td>
                     <label>Res</label>
-                    <input type="text">
+                    <input class="stat" name="resistance" type="text">
                 </td>
             </tr>
             <tr>
                 <td>
                     <label>Speed</label>
-                    <input type="text">
+                    <input class="stat" name="speed" type="text">
                 </td>
                 <td>
                     <label>Con</label>
-                    <input type="text">
+                    <input class="stat" name="constitution" type="text">
                 </td>
             </tr>
             </tbody>
