--- a/index.html
+++ b/index.html
@@ -97,29 +97,35 @@ TODO: Add input access to unit stats variables.
         </div>
 
         <div class="top-containers battle-details">
-            <p class="repeat-attack"></p>
 
+            <h4 class="repeat-attack"></h4>
             <p class="hp"></p>
             <p class="might"></p>
             <p class="accuracy"></p>
             <p class="critical"></p>
 
-            <label for="unit1-terrain-dropdown"></label>
-            <select id="unit1-terrain-dropdown"></select>
+            <h4>
+                <label for="unit1-terrain-dropdown">Terrain:</label>
+                <select id="unit1-terrain-dropdown"></select>
+            </h4>
         </div>
 
     </div>
 
     <div class="buttons-container">
+        <br><br><br><br>
         <button id="fight" type="button">FIGHT!</button>
         <button id="reset" type="button">RESET!</button>
 
-        <br/>
+        <br>
 
-        <label for="battle-separation" hidden>Separation:</label>
-        <select id="battle-separation" hidden>
+        <label for="battle-separation">Separation:</label>
+        <select id="battle-separation">
             <option value="1">1</option>
             <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
         </select>
     </div>
 
@@ -195,15 +201,17 @@ TODO: Add input access to unit stats variables.
         </div>
 
         <div class="top-containers battle-details">
-            <p class="repeat-attack"></p>
 
+            <h4 class="repeat-attack"></h4>
             <p class="hp"></p>
             <p class="might"></p>
             <p class="accuracy"></p>
             <p class="critical"></p>
 
-            <label for="unit2-terrain-dropdown"></label>
-            <select id="unit2-terrain-dropdown"></select>
+            <h4>
+                <label for="unit2-terrain-dropdown">Terrain:</label>
+                <select id="unit2-terrain-dropdown"></select>
+            </h4>
         </div>
     </div>
 
