--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-TODO: Merge input with display.
 TODO: Add input access to unit stats variables.
+TODO: Add title and helpful documentation.
 -->
 
 <!DOCTYPE html>
@@ -213,6 +213,7 @@ TODO: Add input access to unit stats variables.
                 <select id="unit2-terrain-dropdown"></select>
             </h4>
         </div>
+
     </div>
 
     <div id="battle-log-container">
