Fix repetition of "Attacker" instead of "Defender"

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ TODO: Add title and helpful documentation.
 
         <div class="top-containers">
             <h3 class="unit-name">
-                <label>Attacker:
+                <label>Defender:
                     <select class="unit-dropdown"></select>
                 </label>
             </h3>
