Include StatGrowths module

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ TODO: Add title and helpful documentation.
     <script type="text/javascript" src="js/Terrain.js"></script>
     <script type="text/javascript" src="js/Weapon.js"></script>
     <script type="text/javascript" src="js/WeaponSkill.js"></script>
+    <script type="text/javascript" src="js/StatGrowths.js"></script>
     <script type="text/javascript" src="js/Job.js"></script>
     <script type="text/javascript" src="js/Unit.js"></script>
     <script type="text/javascript" src="js/Battle.js"></script>
