--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!--
-TODO: Add input access to unit stats variables.
 TODO: Add title and helpful documentation.
 -->
 
@@ -7,11 +6,13 @@ TODO: Add title and helpful documentation.
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Battle simulator for Fire Emblem: Sacred Stones</title>
+    <title>Battle calculator for Fire Emblem: Sacred Stones</title>
 
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+    <!-- TODO: Load scripts outside of head -->
 
     <script type="text/javascript" src="js/Misc.js"></script>
     <script type="text/javascript" src="js/Terrain.js"></script>
@@ -25,6 +26,9 @@ TODO: Add title and helpful documentation.
 </head>
 <body>
 
+    <h2>Battle Calculator for Fire Emblem: Sacred Stones</h2>
+    <p>Calculate the odds of a battle by changing unit and weapon details.</p>
+
     <div id="attacker" class="unit-container">
 
         <div class="top-containers">
@@ -37,7 +41,11 @@ TODO: Add title and helpful documentation.
 
             <h4>
                 <label>Level:
-                    <select class="level-dropdown"></select>
+                    <select class="level-dropdown">
+                    </select>
+
+                    <select class="promoted-level-dropdown">
+                    </select>
                 </label>
             </h4>
 
@@ -440,7 +448,11 @@ TODO: Add title and helpful documentation.
 
             <h4>
                 <label>Level:
-                    <select class="level-dropdown"></select>
+                    <select class="level-dropdown">
+                    </select>
+
+                    <select class="promoted-level-dropdown">
+                    </select>
                 </label>
             </h4>
 
