Fix application logic

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-TODO: Add title and helpful documentation.
+TODO: Add helpful documentation.
 -->
 
 <!DOCTYPE html>
@@ -7,22 +7,7 @@ TODO: Add title and helpful documentation.
 <head lang="en">
     <meta charset="UTF-8">
     <title>Battle calculator for Fire Emblem: Sacred Stones</title>
-
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
-
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-
-    <!-- TODO: Load scripts outside of head -->
-
-    <script type="text/javascript" src="js/Misc.js"></script>
-    <script type="text/javascript" src="js/Terrain.js"></script>
-    <script type="text/javascript" src="js/Weapon.js"></script>
-    <script type="text/javascript" src="js/WeaponSkill.js"></script>
-    <script type="text/javascript" src="js/StatGrowths.js"></script>
-    <script type="text/javascript" src="js/Job.js"></script>
-    <script type="text/javascript" src="js/Unit.js"></script>
-    <script type="text/javascript" src="js/Battle.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 
@@ -497,5 +482,16 @@ TODO: Add title and helpful documentation.
         <textarea id="battle-log" rows="14" cols="57"></textarea>
     </div>
 
+
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="js/Misc.js"></script>
+    <script type="text/javascript" src="js/Terrain.js"></script>
+    <script type="text/javascript" src="js/Weapon.js"></script>
+    <script type="text/javascript" src="js/WeaponSkill.js"></script>
+    <script type="text/javascript" src="js/StatGrowths.js"></script>
+    <script type="text/javascript" src="js/Job.js"></script>
+    <script type="text/javascript" src="js/Unit.js"></script>
+    <script type="text/javascript" src="js/Battle.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
